istio-ambient-poc-eks/yaml/security/rogue.yaml
apiVersion: v1
kind: Pod
metadata:
  name: rogue
  namespace: shop
  labels: { app: rogue }
spec:
  serviceAccountName: rogue
  containers:
    - name: curl
      image: curlimages/curl:8.9.1
      command: ["sleep", "infinity"]
